@@ -70,6 +70,12 @@ limit access to certain sub-directories. For example, with a prefix of
 "/home/images/" set on the server, a request by a client for "image.tif" will
 point to the path "/home/images/image.tif".  Any reverse directory path
 component such as ../ is also filtered out. No default value.
+.IP FILESYSTEM_SUFFIX
+This  is a suffix added to the end of each file system path. It can be combined
+with FILESYSTEM_PREFIX. It is not used
+in combination with FILENAME_PATTERN. If e.g. this is set to ".tif", an image
+URL such as  "/UUID" will look for "${FILESYSTEM_PREFIX}/UUID.tif". In the IIIF
+info.json document, the image @id will be set without the ".tif" suuffix.
 .IP MAX_CVT
 The maximum permitted image pixel size returned by the CVT command
 in conjunction with WID or HEI or RGN. The default is 5000. This
@@ -202,7 +208,7 @@ is the most feature rich of the 4 protocols and allows access to the more advanc
 The image paths given to the server must be absolute paths on the server machine (eg. via the FIF variable for the IIP protocol: FIF=/images/test.tif) and
 .I not
 paths relative to the web server document root location. If the FILESYSTEM_PREFIX server directive has been set (see OPTIONS above), then this prefix is automatically pre-pended to all requests
-to generate the absolute image path. Make sure that the server process owner is able to access and read the images.
+to generate the absolute image path. Similarly, if FILESYSTEM_SUFFIX has been set, it will be appended to the path. Make sure that the server process owner is able to access and read the images.
 
 Note that images do
 .I not
