@@ -1,3 +1,7 @@
+12-04-2019:
+	- Added FILESYSTEM_SUFFIX configuration variable.
+
+
 04/07/2019:
 	- Updated homepage URLs.
 	- Forced Content-type for error messages to client text/plain to avoid
